--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/grychi/slackbot-test#readme",
   "dependencies": {
+    "@slack/webhook": "^5.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
